#2 Add support for defining offset reset policy
- Add new optional request parameter.
- Update documentation.
- Update OpenAPI description.
- Implement basic error handling.
